[gd_scene load_steps=10 format=3 uid="uid://da53oj0rua7me"]

[ext_resource type="Texture2D" uid="uid://ckwws2sju4pvf" path="res://assets/sprites/Cave - BigRocks1.png" id="1_43uk3"]
[ext_resource type="Script" path="res://scripts/ui/final_rock.gd" id="1_uqr8i"]
[ext_resource type="FontFile" uid="uid://dleqlbke7wkm2" path="res://assets/fonts/c-64.ttf" id="2_1pjfo"]
[ext_resource type="AudioStream" uid="uid://clhsrcjwsvxt3" path="res://audio/sfx/success01_sfx.mp3" id="4_copte"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_42ajm"]
size = Vector2(178, 117)

[sub_resource type="Animation" id="Animation_dde80"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jkrme"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.433333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w8i1j"]
_data = {
"RESET": SubResource("Animation_dde80"),
"fade_out": SubResource("Animation_jkrme")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ug43k"]
size = Vector2(107, 72)

[node name="FinalRock" type="StaticBody2D"]
collision_mask = 3
script = ExtResource("1_uqr8i")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, 3)
scale = Vector2(0.247283, 0.230469)
texture = ExtResource("1_43uk3")
region_enabled = true
region_rect = Rect2(27, 19, 736, 512)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, 3.5)
shape = SubResource("RectangleShape2D_42ajm")

[node name="Label" type="Label" parent="."]
offset_left = -159.0
offset_top = -20.0
offset_right = -49.0
offset_bottom = 4.0
theme_override_fonts/font = ExtResource("2_1pjfo")
theme_override_font_sizes/font_size = 6
text = "150 points"
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_copte")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w8i1j")
}

[node name="DetectPlayer" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
position = Vector2(-53.5, 26)
shape = SubResource("RectangleShape2D_ug43k")
debug_color = Color(0.935305, 0.225394, 0.310387, 0.42)

[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="DetectPlayer" to="." method="_on_detect_player_body_entered"]
